--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "convex": "^1.17.0",
+    "lodash": "^4.17.21",
+    "next": "^15.0.2",
+    "next-redux-wrapper": "^8.1.0",
+    "react": "^19.0.0-rc-02c0e824-20241028",
+    "react-dom": "^19.0.0-rc-02c0e824-20241028",
+    "react-hook-form": "^7.53.1",
+    "react-rater": "^6.0.5",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.14",
+    "swr": "^2.2.5",
+    "use-onclickoutside": "^0.4.1",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
   }
 }
