--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/forms": "^0.5.9",
     "convex": "^1.17.0",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.454.0",
     "next": "^15.0.2",
     "next-redux-wrapper": "^8.1.0",
+    "npm": "^10.9.0",
     "react": "^19.0.0-rc-02c0e824-20241028",
     "react-dom": "^19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.53.1",
