--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@redis/client": "^1.6.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/forms": "^0.5.9",
+    "compromise": "^14.14.2",
     "convex": "^1.17.0",
+    "cosine-similarity": "^1.0.1",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
+    "natural": "^8.0.1",
+    "net": "^1.0.2",
     "next": "^15.0.2",
     "next-redux-wrapper": "^8.1.0",
     "npm": "^10.9.0",
